--- a/INAProjectApp/src/app/pages/factura-form/factura-form.component.html
+++ b/INAProjectApp/src/app/pages/factura-form/factura-form.component.html
@@ -66,7 +66,7 @@
 
         <mat-form-field class="formField" appearance="fill">
             <mat-label>Cantidad</mat-label>
-            <input matInput type="number" formControlName="cant" max={{cantMax}} min='1' />
+            <input matInput type="number" [defaultValue]="1" formControlName="cant" max={{cantMax}} min='1' />
         </mat-form-field>
 
         <mat-form-field class="formField" appearance="fill">
@@ -77,34 +77,36 @@
         <button mat-raised-button color="primary" (click)="openModal(false)">
             Agregar Producto
         </button>
-
-        <button mat-mini-fab (click)="addDetalleFactura()">
-            <mat-icon class="add-course-btn">add</mat-icon>
-        </button>
     </form>
 </div>
 
-<form class="form" [formGroup]="facturaForm">
+<form class="formTable" [formGroup]="facturaForm">
 
-    <ng-container formArrayName="TbDetalleFacturas">
+    <ng-container class="tableButtom" formArrayName="TbDetalleFacturas">
+        <div style="width: 680px;">
+            <ng-container *ngFor="let item of TbDetalleFacturas.controls; let i = index" [formGroupName]="i">
+                <div>
+                    <mat-form-field appearance="fill">
+                        <input matInput type="text" formControlName="idProducto" placeholder="ID Producto" readonly>
+                    </mat-form-field>
 
-        <ng-container *ngFor="let item of TbDetalleFacturas.controls; let i = index" [formGroupName]="i">
+                    <mat-form-field appearance="fill">
+                        <input matInput type="number" formControlName="cant" placeholder="Cantidad" readonly>
+                    </mat-form-field>
 
-            <mat-form-field appearance="fill">
-                <input matInput type="text" formControlName="idProducto" placeholder="ID Producto" readonly>
-            </mat-form-field>
+                    <mat-form-field appearance="fill">
+                        <input matInput type="number" formControlName="precio" placeholder="Precio" readonly>
+                    </mat-form-field>
 
-            <mat-form-field appearance="fill">
-                <input matInput type="number" formControlName="cant" placeholder="Cantidad" readonly>
-            </mat-form-field>
-
-            <mat-form-field appearance="fill">
-                <input matInput type="number" formControlName="precio" placeholder="Precio" readonly>
-            </mat-form-field>
-
-            <mat-icon class="delete-btn" (click)="eliminarDetalle(i)"> delete_forever</mat-icon>
-
-        </ng-container>
+                    <mat-icon class="delete-btn" (click)="eliminarDetalle(i)"> delete_forever</mat-icon>
+                </div>
+            </ng-container>
+        </div>
+        <div>
+            <button mat-mini-fab (click)="addDetalleFactura()">
+                <mat-icon class="add-course-btn">add</mat-icon>
+            </button>
+        </div>
     </ng-container>
 
 </form>
