--- a/INAProjectApp/src/app/pages/factura-form/factura-form.component.html
+++ b/INAProjectApp/src/app/pages/factura-form/factura-form.component.html
@@ -9,7 +9,7 @@
 
     <!-- Form para Clientes -->
 
-    <form [formGroup]="facturaForm">
+    <form [formGroup]="facturaForm.baseForm">
         <mat-form-field class="formField" appearance="fill">
             <mat-label>Fecha</mat-label>
             <input matInput type="text" formControlName="Fecha" readonly />
@@ -32,7 +32,7 @@
 
     <!-- Form para Tipo Venta - Tipo Pago -->
 
-    <form [formGroup]="facturaForm">
+    <form [formGroup]="facturaForm.baseForm">
         <mat-form-field class="formField" appearance="fill">
             <mat-label>Tipo de Venta</mat-label>
             <select matNativeControl formControlName="TipoVenta">
@@ -45,7 +45,7 @@
         <mat-form-field class="formField" appearance="fill">
             <mat-label>Tipo de Pago</mat-label>
             <select matNativeControl formControlName="TipoPago">
-                <option *ngFor="let opcion of tipoVenta" [ngValue]="opcion.id">
+                <option *ngFor="let opcion of tipoPago" [ngValue]="opcion.id">
                     {{ opcion.nombre }}
                 </option>
             </select>
@@ -66,7 +66,7 @@
 
         <mat-form-field class="formField" appearance="fill">
             <mat-label>Cantidad</mat-label>
-            <input matInput type="number" [defaultValue]="1" formControlName="cant" max={{cantMax}} min='1' />
+            <input matInput type="number" formControlName="cant" max={{cantMax}} min='1' />
         </mat-form-field>
 
         <mat-form-field class="formField" appearance="fill">
@@ -80,7 +80,7 @@
     </form>
 </div>
 
-<form class="formTable" [formGroup]="facturaForm">
+<form class="formTable" [formGroup]="facturaForm.baseForm">
 
     <ng-container class="tableButtom" formArrayName="TbDetalleFacturas">
         <div style="width: 680px;">
@@ -91,20 +91,29 @@
                     </mat-form-field>
 
                     <mat-form-field appearance="fill">
-                        <input matInput type="number" formControlName="cant" placeholder="Cantidad" readonly>
+                        <input matInput type="number" formControlName="cant" placeholder="Cantidad">
                     </mat-form-field>
 
                     <mat-form-field appearance="fill">
                         <input matInput type="number" formControlName="precio" placeholder="Precio" readonly>
                     </mat-form-field>
-
-                    <mat-icon class="delete-btn" (click)="eliminarDetalle(i)"> delete_forever</mat-icon>
+                    <mat-icon (click)="eliminarDetalle(i)"> delete_forever </mat-icon>
+                    <!-- <mat-icon class="delete-btn" (click)="editarCantidad(i,TbDetalleFacturas.get('cant')?.value)"> Modificar </mat-icon> -->
+                    <mat-icon
+                        (click)="editarCantidad(i,facturaForm.baseForm.get('TbDetalleFacturas.' + i + '.cant')?.value)">
+                        update
+                    </mat-icon>
                 </div>
             </ng-container>
         </div>
-        <div>
+        <div style="
+        display: flex;
+        flex-direction: column;">
             <button mat-mini-fab (click)="addDetalleFactura()">
                 <mat-icon class="add-course-btn">add</mat-icon>
+            </button>
+            <button mat-raised-button color="primary" (click)="guardarFactura()">
+                Guardar Factura
             </button>
         </div>
     </ng-container>
