--- a/INAProjectApp/src/app/pages/factura-form/factura-form.component.html
+++ b/INAProjectApp/src/app/pages/factura-form/factura-form.component.html
@@ -66,7 +66,7 @@
 
         <mat-form-field class="formField" appearance="fill">
             <mat-label>Cantidad</mat-label>
-            <input matInput type="number" formControlName="cant" max={{cantMax}} min='1' />
+            <input matInput type="number" formControlName="stock" max={{cantMax}} min='1' />
         </mat-form-field>
 
         <mat-form-field class="formField" appearance="fill">
@@ -99,8 +99,7 @@
                     </mat-form-field>
                     <mat-icon (click)="eliminarDetalle(i)"> delete_forever </mat-icon>
                     <!-- <mat-icon class="delete-btn" (click)="editarCantidad(i,TbDetalleFacturas.get('cant')?.value)"> Modificar </mat-icon> -->
-                    <mat-icon
-                        (click)="editarCantidad(i,facturaForm.baseForm.get('TbDetalleFacturas.' + i + '.cant')?.value)">
+                    <mat-icon (click)="editarCantidad(i,detalleFacturaForm.baseForm.get('stock')?.value)">
                         update
                     </mat-icon>
                 </div>
