--- a/INAProjectApp/src/app/pages/factura-form/factura-form.component.html
+++ b/INAProjectApp/src/app/pages/factura-form/factura-form.component.html
@@ -98,8 +98,7 @@
                         <input matInput type="number" formControlName="precio" placeholder="Precio" readonly>
                     </mat-form-field>
                     <mat-icon (click)="eliminarDetalle(i)"> delete_forever </mat-icon>
-                    <!-- <mat-icon class="delete-btn" (click)="editarCantidad(i,TbDetalleFacturas.get('cant')?.value)"> Modificar </mat-icon> -->
-                    <mat-icon (click)="editarCantidad(i,detalleFacturaForm.baseForm.get('stock')?.value)">
+                    <mat-icon (click)="editarCantidad(i,item)">
                         update
                     </mat-icon>
                 </div>
